Closed Bug 935786 Opened 12 years ago Closed 12 years ago

Assertion failure: !IsInnerWindow() || IsCurrentInnerWindow() at nsGlobalWindow.cpp:8909

Categories

(Core :: DOM: Core & HTML, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla28
Tracking Status
firefox28 --- fixed

People

(Reporter: gwagner, Assigned: peterv)

References

Details

(Keywords: assertion, Whiteboard: [qa-])

Attachments

(2 files)

I am seeing this assertion on mochitests on a debug emulator build. These tests are currently only enabled on pine and cedar: https://tbpl.mozilla.org/php/getParsedLog.php?id=30232634&tree=Pine&full=1#error2 It started with this merge: https://hg.mozilla.org/projects/pine/pushloghtml?startID=18&endID=19 Seems like bug 932309 caused it. Smaug wrote a little debug patch for it. The results should show up here:https://tbpl.mozilla.org/?tree=Pine&showall=1
Assignee: nobody → peterv
Status: NEW → ASSIGNED
Blocks: 934769
Blocks: 933355
Does the desktop testcase in bug 937318 help?
Attached patch v1Splinter Review
Hopefully people will look at the warning :-(.
Attachment #830757 - Flags: review?(bugs)
Attachment #830757 - Flags: review?(bugs) → review+
I pushed this patch to pine but it turned it orange: https://tbpl.mozilla.org/?tree=Pine
Attached patch v1.1Splinter Review
With the additional check to keep the old behaviour of allowing an outer in nsAutoWindowStateHelper.
Attachment #831449 - Flags: review+
I went ahead and pushed this to inbound to hopefully clear up bug 934769 while the OOM work continues. https://hg.mozilla.org/integration/mozilla-inbound/rev/594b69bb0ac3
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Keywords: assertion
Whiteboard: [qa-]
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: