Bug 935786 - Assertion failure: !IsInnerWindow() || IsCurrentInnerWindow() at nsGlobalWindow.cpp:8909.